--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Ujwal Kashyap</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Ujwal Kashyap and I am hoping to become a software engineer and a web developer at some point in the future.</p>
       <h1>Where I'm From</h1>
       <p>Details here...</p>
       <h1>What are your favorite hobbies?</h1>
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>Details here...</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Details hre...</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Details here...</p>
     </section>
