Filled out the sections for all of the details about me

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>My name is Ujwal Kashyap and I am hoping to become a software engineer and a web developer at some point in the future.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Los Angeles, California!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies include playing games like Smash Ultimate, going to the gym and watching fun TV shows.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be a CEO for a company that I feel very passionate about building and leading.</p>
       <h1>Where do you live?</h1>
-      <p>Details hre...</p>
+      <p>Right now, I live in Berkeley but am open to moving around for different work opportunities.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer so that I can earn a sustainable income to become debt free so that I could follow through with proceeding in the future.</p>
     </section>
 
     <footer id="footer">
